remove unnecessary signer info, since its passed by solana pay
