# src/handlers/transaction-handlers/createWriteNFTMetadata/index.ts
@@ -3,7 +3,8 @@ import { CONNECTION } from "../../../constants";
 import { createWriteNFTMetadataTx } from "../../../on-chain-metadata";
 
 export async function createWriteNFTMetadata(req: Request) {
-  const { image, owner } = req.query;
+  const { image } = req.query;
+  const { address: owner } = req.body;
   return await createWriteNFTMetadataTx(CONNECTION, owner as string, {
     image,
   });
